this code belongs to sanju kumari..first push

--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -40,6 +40,7 @@
 
 <div class="footer">
     <!-- this div for footer part -->
+    Hey everyone this is beginning of our collaborative project all the best .
 </div>
 
 <!---------------------------------END FOOTER HERE--------------------------------------------------------->
