--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
 
-<div class="header">
+<div id="header">
     <!-- html added here for header elements -->
 
 </div>
@@ -23,22 +23,26 @@
 
 <!-- -------------------------------------END G-SHOCK HERE--------------------------------------------->
 
-<div class="sidebar-watch">   
+<div id="sidebar-watch" style="display: flex;">   
 <!-- this div for sidebar-and watch-images -->
 
-<div class="sidebar">
-    <!-- this div for side-bar -->
+<div id="sidebar">
+  
+     <!-- this div for side-bar -->
+  
 </div>
 
 <div id="watch-img">
-    <!-- this div for watch-images -->
+ 
+   <!-- this div for watch-images -->
+    
 </div>
 
 </div>
 
 <!-- ------------------------------------END SIDEBAR AND WATCH-IMG HERE--------------------------------------->
 
-<div class="footer">
+<div id="footer">
     <!-- this div for footer part -->
 </div>
 
