--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -11,7 +11,7 @@
   <div class="container">
 
 <div id="header">
-  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, exercitationem!
+  <h2>welcome guys</h2>
     <!-- html added here for header elements -->
 
 </div>
