--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -46,6 +46,7 @@
 <div id="footer">
     <!-- this div for footer part -->
     <h2>welcome to footer</h2>
+    <!-- write your code here sanju kumari -->
   
 </div>
 
