--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -46,7 +46,7 @@
 <div id="footer">
     <!-- this div for footer part -->
     <h2>welcome to footer</h2>
-    <!-- write your code here sanju kumari -->
+    <h3>write your code here sanju kumari </h3> 
   
 </div>
 
