this is the footer part of my branch

--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <!-- link for  icons of social media -->
+    <script src="https://kit.fontawesome.com/7fdd60f25a.js" crossorigin="anonymous"></script>
 
+    <!-- for fonts -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
 </head>
 <body>
   <div class="container">
@@ -38,9 +44,49 @@
 
 <!-- ------------------------------------END SIDEBAR AND WATCH-IMG HERE--------------------------------------->
 
-<div class="footer">
+<div id="footer">
     <!-- this div for footer part -->
-    Hey everyone this is beginning of our collaborative project all the best .
+    <div style="display:flex; gap:20px;">
+        <h3>Products</h3>
+        <h3>Customer Support</h3>
+        <h3>Corporate</h3>
+        <h3>Warranty</h3>
+    </div>
+
+    <div style="display:flex; gap:20px;">
+        <span>Product</span>
+        <span>Support</span>
+        <span>Corporate</span>
+        <span>Warranty</span>
+    </div>
+
+    <div style="display:flex; gap:20px;">
+        <span><i class="fa-brands fa-facebook"></i></span>
+        <span><i class="fa-brands fa-instagram"></i></span>
+        <span><i class="fa-brands fa-youtube"></i></span>
+        <span><i class="fa-brands fa-x-twitter"></i></span>
+        <span><i class="fa-brands fa-linkedin"></i></span>
+    </div>
+
+    <div style="display:flex; gap:20px;">
+        <p>Privacy Policy</p>
+        <p>Labour Compliance</p>
+        <p>Secretarial(redirect)</p>
+        <p>CSR Policy</p>
+        <p>Cookie Policy</p>
+        <p>Terms of Use</p>
+        <p>SiteMap</p>
+        <p>Contact Us </p>
+        <p>India</p>
+        
+    </div>
+    <footer>© 2024 Casio India Co., Pvt. Ltd.</footer>
+
+    <h4>
+        <b>Please&nbsp;help us recycle&nbsp;e-waste</b> and plastic waste responsibly.<br>
+        For more information or e-waste pick up, please call&nbsp;<b>1800&nbsp;2022746&nbsp;</b>or&nbsp;<a title="Product Disposal Guidelines_Casio" href="/content/dam/casio/local/in/products/label/product-disposal-guidelines/Product_Disposal_Guidelines_Casio_202212.pdf"><b>click here</b></a>&nbsp;for more details.
+    </h4>
+
 </div>
 
 <!---------------------------------END FOOTER HERE--------------------------------------------------------->
