--- a/Bootstrap/footer.html
+++ b/Bootstrap/footer.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./footer.css">
     <script src="https://kit.fontawesome.com/7fdd60f25a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
@@ -14,30 +15,34 @@
 </style>
 </head>
 <body>
-    <div id="container">
+    <div id="container-fluid">
         <div>
             <span>Products</span>
             <span>Customer Support</span>
             <span>Corporate</span>
             <span>Warranty</span>
 
-            <span>Product</span>
-            <span>Support</span>
-            <span>Corporate</span>
-            <span>Warranty</span>
+            <span class="grey">Product</span>
+            <span class="grey">Support</span>
+            <span class="grey">Corporate</span>
+            <span class="grey">Warranty</span>
             
         </div>
 <!-- .................................................................................................. -->
-        <hr>
+        
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Products</button>
+            <button class="btn btn-secondary dropdown-toggle" type="button"  style ="border:none;" data-bs-toggle="dropdown" aria-expanded="false">Products <span class="material-symbols-outlined">
+              expand_more
+              </span> </button>
             <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
               <li><a class="dropdown-item">Products</a></li>
             </ul>
         </div>
         <hr>
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Customer Support</button>
+          <button class="btn btn-secondary dropdown-toggle" style ="border:none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">Customer Support  <span class="material-symbols-outlined">
+            expand_more
+            </span> </button>
           <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
             <li><a class="dropdown-item">Support</a></li>
           </ul>
@@ -45,7 +50,9 @@
       </div>
       <hr>
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Corporate</button>
+        <button class="btn btn-secondary dropdown-toggle" style ="border:none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">Corporate  <span class="material-symbols-outlined">
+          expand_more
+          </span> </button>
         <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
           <li><a class="dropdown-item">Corporate</a></li>
         </ul>
@@ -53,7 +60,9 @@
     </div>
     <hr>
     <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Warranty</button>
+      <button class="btn btn-secondary dropdown-toggle"  style ="border:none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">Warranty  <span class="material-symbols-outlined">
+        expand_more
+        </span> </button>
       <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
         <li><a class="dropdown-item">Warranty</a></li>
       </ul>
@@ -63,15 +72,15 @@
 <!-- ................................................................................................... -->
 
 
-        <div>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-x-twitter"></i>
-            <i class="fa-brands fa-linkedin"></i>
+        <div class = "social">
+            <i style ="margin-left:30px;" class="fa-brands fa-facebook"></i>
+            <i style ="margin-left:20px;" class="fa-brands fa-instagram"></i>
+            <i style ="margin-left:20px;" class="fa-brands fa-youtube"></i>
+            <i style ="margin-left:20px;" class="fa-brands fa-x-twitter"></i>
+            <i style ="margin-left:20px;" class="fa-brands fa-linkedin"></i>
 
         </div>
-        <div>
+        <div class ="span2" > 
             <span>Privacy Policy</span>
             <span>Labour Compliance</span>
             <span>Secretarial(redirect)</span>
@@ -82,10 +91,10 @@
             <span>Contact Us</span>
             <span>India</span>
         </div>
-        <p>© 2024 Casio India Co., Pvt. Ltd</p>
+        <p class="p">© 2024 Casio India Co., Pvt. Ltd</p>
         <div>
-            <p>Please help us recycle e-waste  and plastic waste responsibly.</p>
-            <p>For more information or e-waste pick up, please call 1800 20227466 or <a href="">click here</a> for more details.</p>
+            <h1>Please help us recycle e-waste  and plastic waste responsibly.</h1>
+            <h1>For more information or e-waste pick up, please call 1800 20227466 or <a href="">click here</a> for more details.</h1>
         </div>
     </div>
 
