--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -24,9 +24,259 @@
   <body>
     <div id="sidebar-watch">
       <!-- this div for sidebar-and watch-images -->
+
       <div id="sidebar">
-        <!-- this div for side-bar -->
+        <div id="filter">
+          <h6>Sort</h6>
+          <div class="form-check dark-circle">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault1"
+            />
+            <label class="form-check-label" for="flexRadioDefault1"
+              >Newest</label
+            >
+          </div>
+          <div class="form-check dark-circle">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault2"
+              checked=""
+            />
+            <label class="form-check-label" for="flexRadioDefault2"
+              >Price: High-Low</label
+            >
+          </div>
+          <div class="form-check dark-circle">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault3"
+            />
+            <label class="form-check-label" for="flexRadioDefault3"
+              >Price: Low-High</label
+            >
+          </div>
+          <div class="form-check dark-circle">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault4"
+            />
+            <label class="form-check-label" for="flexRadioDefault4"
+              >Weight: Heavy-Light</label
+            >
+          </div>
+          <div class="form-check dark-circle">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="flexRadioDefault"
+              id="flexRadioDefault5"
+            />
+            <label class="form-check-label" for="flexRadioDefault5"
+              >Weight: Light-Heavy</label
+            >
+          </div>
+          <hr />
+          <h6>Price-Range</h6>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckDefault"
+            />
+            <label class="form-check-label" for="flexCheckDefault">
+              Below - <i class="fa-solid fa-indian-rupee-sign"></i> 5000
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckChecked"
+              checked
+            />
+            <label class="form-check-label" for="flexCheckChecked">
+              <i class="fa-solid fa-indian-rupee-sign"></i> 5000 -
+              <i class="fa-solid fa-indian-rupee-sign"></i> 10000
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckChecked"
+              checked
+            />
+            <label class="form-check-label" for="flexCheckChecked">
+              <i class="fa-solid fa-indian-rupee-sign"></i> 10000 -
+              <i class="fa-solid fa-indian-rupee-sign"></i> 20000
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckChecked"
+              checked
+            />
+            <label class="form-check-label" for="flexCheckChecked">
+              <i class="fa-solid fa-indian-rupee-sign"></i> 20000 -
+              <i class="fa-solid fa-indian-rupee-sign"></i> 30000
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckChecked"
+              checked
+            />
+            <label class="form-check-label" for="flexCheckChecked">
+              <i class="fa-solid fa-indian-rupee-sign"></i> 30000 -
+              <i class="fa-solid fa-indian-rupee-sign"></i> 40000
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckChecked"
+              checked
+            />
+            <label class="form-check-label" for="flexCheckChecked">
+              <i class="fa-solid fa-indian-rupee-sign"></i> 40000 -
+              <i class="fa-solid fa-indian-rupee-sign"></i> 50000
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckChecked"
+              checked
+            />
+            <label class="form-check-label" for="flexCheckChecked">
+              <i class="fa-solid fa-indian-rupee-sign"></i> Above -
+              <i class="fa-solid fa-indian-rupee-sign"></i> 50000
+            </label>
+          </div>
+          <hr />
+
+          <h6>Display type</h6>
+          <div id="one">
+            <button>Digital</button>
+            <button disabled>Analog</button>
+            <button>Digital and Analog</button>
+
+            <hr />
+            <h6>Functions</h6>
+            <button>Solar Charger</button>
+            <button>Water Resistance</button>
+            <button>Smartphone link</button>
+            <button>Tide graph</button>
+            <button disabled>Hand home position correction</button>
+            <button>Moon data</button>
+
+            <hr />
+            <h6>bezel color</h6>
+          </div>
+          <div id="two">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <hr />
+
+          <h6>Series</h6>
+          <button>MT-G</button>
+          <button>FULL METAL</button>
+          <button>G-STEEL</button>
+          <button>G-SQUAD</button>
+          <button>MASTER OF G</button>
+          <button>5600 SERIES</button>
+          <button>2100 SERIES</button>
+          <button>110 SERIES</button>
+          <button>6900 SERIES</button>
+          <button>G-LIDE</button>
+          <button>LIMITED EDITION</button>
+          <button>G-SHOCK WOMEN</button>
+
+          <hr />
+
+          <h6>Time Adjustment</h6>
+          <button>GPS satelite radio reception</button>
+          <button>Standers radio reception</button>
+
+          <hr />
+          <h6>Sensor feature</h6>
+          <button>Direction</button>
+          <button>Altitude</button>
+          <button>Boromatric function</button>
+          <button>Tempreture</button>
+          <button disabled>Water depth</button>
+          <button disabled>Humidity</button>
+          <button disabled>Number of steps</button>
+          <button>Acceleration (number of steps/travel distance)</button>
+          <button>Heart rate</button>
+
+          <hr />
+
+          <h6>Characteristics</h6>
+          <button disabled>Carbon materials</button>
+          <button>Collaboration model</button>
+
+          <hr />
+
+          <h6>Water resistance function</h6>
+          <button disabled>Water resistance for ISO 200m submersion</button>
+          <button>Water resistance up to 20 bar</button>
+
+          <hr />
+
+          <button
+            style="
+              border: 1px solid rgb(66, 66, 66);
+              text-align: center;
+              width: 130px;
+              height: 40px;
+              font-size: 16px;
+              margin: 40px;
+              background-color: white;
+            "
+          >
+            Clear
+          </button>
+        </div>
       </div>
+
+      <!-- this div for side-bar -->
+
       <div id="watch-img">
         <div class="p-4 card" style="width: 18rem">
           <img
