--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -4,19 +4,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>casio.com</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-  <div class="container">
+  
+<!-- ==========================header start here====================== -->
 
-<div id="header">
- 
-    <!-- html added here for header elements -->
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="#">Logo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="#">G-SHOCK Brand Site</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Store Search</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Support</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Services<i class="fa-solid fa-angle-down"></i></a>
+              </li>
+          </ul>
+      </div>
+  </div>
+  
+</nav>
 
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.casio.com/content/casio/locales/in/en/products/_jcr_content/root/responsivegrid/carousel/item_1707291119548.casiocoreimg.jpeg/1707453265146/wedding-microsite1920x816.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.casio.com/content/casio/locales/in/en/products/_jcr_content/root/responsivegrid/carousel/image_1970305012_cop.casiocoreimg.jpeg/1705993289271/banner-flare-red-pc.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.casio.com/content/casio/locales/in/en/products/_jcr_content/root/responsivegrid/carousel/item_1686301069416.casiocoreimg.jpeg/1697195806949/pc-w1920h816-logo.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.casio.com/content/casio/locales/in/en/products/_jcr_content/root/responsivegrid/carousel/item_1706083270797.casiocoreimg.jpeg/1706083432031/service-fest-desktop1920x816.jpeg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 
+
+
+<hr>
+
+
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.casio.com/content/casio/locales/in/en/products/_jcr_content/root/responsivegrid/carousel_copy/image_1970305012_cop_1088777932.casiocoreimg.jpeg/1689570227031/product-category-1920x816.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.casio.com/content/casio/locales/in/en/products/_jcr_content/root/responsivegrid/carousel_copy/image_1970305012_cop_2034587992.casiocoreimg.jpeg/1676551981928/cic-banner-desktop.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.casio.com/content/casio/locales/in/en/products/_jcr_content/root/responsivegrid/teaser_1897153092.casiocoreimg.jpeg/1691986502988/privia-casio-banner.jpeg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
 <!-- -----------------------------------END HEADER here------------------------------------------------>
+
+
+
 
 <div id="G-shock">
     <!-- this div for G-SHOCK and G-Shock carosel -->
