--- a/Bootstrap/basicStruct.html
+++ b/Bootstrap/basicStruct.html
@@ -34,7 +34,24 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+
+    <!-- this is sanju's foooter section link...........beginning -->
+    <script src="https://kit.fontawesome.com/7fdd60f25a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
+
+
+
+    <!-- this is sanju's foooter section link  ending part -->
+
     <link rel="stylesheet" href="style.css" />
+
+
+   
   </head>
   <body>
     <!-- ==========================header start here====================== -->
@@ -2970,12 +2987,94 @@
     </div>
     <!-- ------------------------------------MAINPART END HERE--------------------------------------->
 
-    <div id="footer">
-      <!-- this div for footer part -->
+    <!-- start............this is sanju'footerpart..................... -->
+    <div id="container-fluid">
+      <div>
+          <span>Products</span>
+          <span>Customer Support</span>
+          <span>Corporate</span>
+          <span>Warranty</span>
+
+          <span class="grey">Product</span>
+          <span class="grey">Support</span>
+          <span class="grey">Corporate</span>
+          <span class="grey">Warranty</span>
+          
+      </div>
+<!-- .................................................................................................. -->
+      
+      <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button"  style ="border:none;" data-bs-toggle="dropdown" aria-expanded="false">Products <span class="material-symbols-outlined">
+            expand_more
+            </span> </button>
+          <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
+            <li><a class="dropdown-item">Products</a></li>
+          </ul>
+      </div>
+      <hr>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" style ="border:none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">Customer Support  <span class="material-symbols-outlined">
+          expand_more
+          </span> </button>
+        <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
+          <li><a class="dropdown-item">Support</a></li>
+        </ul>
+
     </div>
+    <hr>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" style ="border:none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">Corporate  <span class="material-symbols-outlined">
+        expand_more
+        </span> </button>
+      <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
+        <li><a class="dropdown-item">Corporate</a></li>
+      </ul>
 
-    <!---------------------------------END FOOTER HERE--------------------------------------------------------->
+  </div>
+  <hr>
+  <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle"  style ="border:none;" type="button" data-bs-toggle="dropdown" aria-expanded="false">Warranty  <span class="material-symbols-outlined">
+      expand_more
+      </span> </button>
+    <ul class="dropdown-menu" style = "margin:0px ;padding:0px;">
+      <li><a class="dropdown-item">Warranty</a></li>
+    </ul>
 
-    <!-- -----------------------------END MAIN-CONTAINER HERE--------------------------------------------------- -->
+</div>
+
+<!-- ................................................................................................... -->
+
+
+      <div class = "social">
+          <i style ="margin-left:30px;" class="fa-brands fa-facebook"></i>
+          <i style ="margin-left:20px;" class="fa-brands fa-instagram"></i>
+          <i style ="margin-left:20px;" class="fa-brands fa-youtube"></i>
+          <i style ="margin-left:20px;" class="fa-brands fa-x-twitter"></i>
+          <i style ="margin-left:20px;" class="fa-brands fa-linkedin"></i>
+
+      </div>
+      <div class ="span2" > 
+          <span>Privacy Policy</span>
+          <span>Labour Compliance</span>
+          <span>Secretarial(redirect)</span>
+          <span>CSR Policy </span>
+          <span>Cookie Policy</span>
+          <span>Term of Use</span>
+          <span>Sitemap</span>
+          <span>Contact Us</span>
+          <span>India</span>
+      </div>
+      <p class="p">© 2024 Casio India Co., Pvt. Ltd</p>
+      <div>
+          <h1>Please help us recycle e-waste  and plastic waste responsibly.</h1>
+          <h1>For more information or e-waste pick up, please call 1800 20227466 or <a href="">click here</a> for more details.</h1>
+      </div>
+  </div>
+
+
+
+     <!-- ..................................................................this is sanju'footerpart.. ending part................... -->
+
+   
   </body>
 </html>
