Pratik's part added

--- a/Figma/index.html
+++ b/Figma/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h2>welcome guys</h2>
-</body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <!-- =============pratik's Header part============ -->
+    <div id="section1">
+      <div class="header">
+        <div class="content1">
+          <div><img src="./images/Link → logo-light.svg.png" alt="" /></div>
+          <span>Home</span>
+          <span>Tour</span>
+          <span>Destination</span>
+          <span>Activities</span>
+          <span>Pages</span>
+          <span>Contacts</span>
+        </div>
+        <div class="content2">
+          <span>USD</span>
+          <span>Sign Up</span>
+          <button>Log in</button>
+          <div></div>
+        </div>
+      </div>
+      <img
+        src="./images/image_background.png"
+        class="image"
+        alt="background_image"
+      />
+      <div class="box1">
+        <p>Starting at $978</p>
+        <h1>Iceland's legendary Golden Circle</h1>
+        <p>
+          Enjoy a full-day bus tour of Iceland's legendary Golden Circle. Soak
+          in the warm thermal waters of the Secret Lagoon.
+        </p>
+        <button>View Tour</button>
+      </div>
+      <div class="box2">
+        <p>Day1</p>
+        <p>SecretLagoon</p>
+        <img src="./images/vector_1img.png" alt="" />
+        <p>Day4</p>
+        <p>GullfossWaterfall</p>
+      </div>
+    </div>
+
+    <!-- section2 html code -->
+
+    <div id="section2">
+      <h3>Trending destinations</h3>
+      <p>See all</p>
+      <div class="b1">
+        <img src="./images/paris.png" alt="paris" />
+        <p>Paris</p>
+        <p>100+ Tours</p>
+      </div>
+      <div class="b2">
+        <img src="./images/singapur.png" alt="sng" />
+        <p>Singapore</p>
+        <p>300+ Tours</p>
+      </div>
+      <div class="b3">
+        <img src="./images/rome.png" alt="roma" />
+        <p>Roma</p>
+        <p>400+ Tours</p>
+      </div>
+      <div class="b4">
+        <img src="./images/bangkok.png" alt="bang" />
+        <p>Bangkok</p>
+        <p>100+ Tours</p>
+      </div>
+      <div class="b5">
+        <img src="./images/bali.png" alt="bali" />
+        <p>Bali</p>
+        <p>600+ Tours</p>
+      </div>
+      <div class="b6">
+        <img src="./images/phuket.png" alt="phuket" />
+        <p>Phuket</p>
+        <p>200+ Tours</p>
+      </div>
+      <div class="b7">
+        <img src="./images/tokoyo.png" alt="tokyo" />
+        <p>Tokyo</p>
+        <p>700+ Tours</p>
+      </div>
+      <div class="b8">
+        <img src="./images/capadocia.png" alt="cappa" />
+        <p>Cappadocia</p>
+        <p>900+ Tours</p>
+      </div>
+    </div>
+
+    <!-- =============pratik's Header part============ -->
+
+    <!-- ============Varshiths's html part starts here============ -->
+
+    <!-- ============Varshiths's html part starts here============ -->
+
+    <!-- ============Sanju's html part starts here============ -->
+
+    <!-- ============Sanju's html part starts here============-->
+  </body>
 </html>
