vaibhavs part also added here

--- a/Figma/index.html
+++ b/Figma/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:wght@700&display=swap"
+        rel="stylesheet">
+    
   </head>
   <body>
+    <div class="main-container1">
     <!-- =============pratik's Header part============ -->
     <div id="section1">
       <div class="header">
@@ -272,10 +279,105 @@
    </summary>    
   
 
-    <!-- ============Varshiths's html part starts here============ -->
+    <!-- ============Varshiths's html part end here============ -->
 
-    <!-- ============Sanju's html part starts here============ -->
+    
 
-    <!-- ============Sanju's html part starts here============-->
+
+    <!-- =================vaibhavs part start here=================== -->
+    <div class="main-container">
+      <div class="article1">
+          <h5>Travel Articles</h5>
+          <p>See all</p>
+      </div>
+      <div class="article2">
+          <div>
+              <button>Trips</button>
+          </div>
+          <div>
+              <button>Trips</button>
+          </div>
+          <div>
+              <button>Trips</button>
+          </div>
+
+      </div>
+      <div class="article3">
+          <div>
+              <p><span id="s1">April 06 2023</span> <span id="s2">By Ali Tufan</span></p>
+              <p>Kenya vs Tanzania Safari: The Better African <br>
+                  Safari Experience</p>
+          </div>
+          <div>
+              <p><span id="s3">April 07 2023</span> <span id="s4">By Emily Johnson</span></p>
+              <p>Exploring the Serengeti: A Wildlife Adventure</p>
+          </div>
+          <div>
+              <p><span id="s5">April 07 2023</span> <span id="s6"> By Emily Johnson</span></p>
+              <p>Exploring the Serengeti: A Wildlife Adventure</p>
+          </div>
+      </div>
+
+  </div>
+  <footer>
+      <div class="myfooter-section1">
+          <div class="part-1">
+              <h4>Speak to our expert at <span>1-800-453-6744</span></h4>
+              <p>Follow Us</p>
+          </div>
+
+          <div class="part-2">
+              <div>
+                  <h4>Contact</h4>
+                  <p>328 Queensberry Street, North Melbourne VIC3051,<br>
+                      Australia.</p>
+                  <p>hi@viatours.com</p>
+              </div>
+              <div>
+                  <h4>Company</h4>
+                  <p>About Us</p>
+                  <p>Tourz Reviews</p>
+                  <p>Contact Us</p>
+                  <p>Travel Guides</p>
+                  <p>Data Policy</p>
+                  <p>Cookie Policy</p>
+                  <p>Legal</p>
+                  <p>Sitemap</p>
+              </div>
+              <div>
+                  <h4>Support</h4>
+                  <p>Get in Touch</p>
+                  <p>Help center</p>
+                  <p>Live chat</p>
+                  <p>How it works</p>
+              </div>
+              <div>
+                  <h4>Newsletter</h4>
+                  <p>Subscribe to the free newsletter and stay</p>
+                  <p>up to date</p>
+                  <input id="first-name" type="tel" name="phone" minlength="9" maxlength="9"
+                      placeholder="Your email address                                        Send " />
+                  <h4>Mobile Apps</h4>
+                  <p>iOS App</p>
+                  <p>Android App</p>
+
+              </div>
+          </div>
+      </div>
+  </footer>
+  <div class="copyrights">
+      <div>
+          <span>© Copyright Viatours 2024</span>
+      </div>
+      <div>
+          <img src="./vaibhavs image/images 1.png" alt="">
+          <img src="./vaibhavs image/images 2.png" alt="">
+          <img src="./vaibhavs image/images 3.png" alt="">
+          <img src="./vaibhavs image/images 4.png" alt="">
+          <img src="./vaibhavs image/images 5.png" alt="">
+          <img src="./vaibhavs image/images 6.png" alt="">
+      </div>
+  </div>
+     <!-- =================vaibhavs part end here=================== -->
   </body>
 </html>
